apps/base/pocket-id/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pocket-id
  namespace: pocket-id
  labels:
    app.kubernetes.io/name: pocket-id
spec:
  replicas: 1
  revisionHistoryLimit: 3
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: pocket-id
  template:
    metadata:
      labels:
        app.kubernetes.io/name: pocket-id
    spec:
      enableServiceLinks: true
      containers:
        - name: pocket-id
          image: ghcr.io/pocket-id/pocket-id:v2.2.0
          ports:
            - name: http
              containerPort: 1411
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5
          volumeMounts:
            - name: pocket-id
              mountPath: /app/data
          resources:
            limits:
              memory: 2Gi
              cpu: "1"
            requests:
              memory: 256Mi
              cpu: "0.2"
      volumes:
        - name: pocket-id
          persistentVolumeClaim:
            claimName: pocket-id
